--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<p>为经典模拟火车供应插件的第三方工作室</p>
 					<ul class="actions special">
 						
-						<li><a href="#" class="button">我们的产品</a></li>
+						<li><a href="MySp.html" class="button">我们的产品</a></li>
 					</ul>
 				</section>
 
