--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<br />
 							让您拥有更多的体验！</h2>
 							<p>我们成立于2023年，制作列车涂装和线路。<br />
-							目前本工作室共三人（Donce、XLCM、CqLib)</p>
+							目前本工作室共三人（Donce、DXC、CRVIS)</p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
