--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<a href="#" class="icon solid fa-angle-down">更多功能</a>
 								<ul>
 									<li><a href="Thanks.html">商店</a></li>
-									<li><a href="platform\plinx.html">云平台</a></li>
+									<li><a href="plinx.html">云平台</a></li>
 									
 									
 								</ul>
