--- a/plinx.html
+++ b/plinx.html
@@ -86,7 +86,7 @@
 					<div class="home-content z-index position-relative">
 						<h3>重庆牌模拟火车</h3>
 						<h1>CQGPlatform</h1>
-						<p>高级的云平台</p>
+						<p>高级的云平台(功能测试中，软件未开发完毕，请勿点击下载）</p>
 						<div class="home-button-box">
 							<a href="#" class="button home-btn-1 js-scroll">使用手册&条件</a>
 							<a href="file\CQGPlatform.exe" class="button home-btn-2">立即下载最新版</a>
