--- a/plinx.html
+++ b/plinx.html
@@ -123,6 +123,12 @@
 	<script src="static/js/plugins.js"></script>
 	<!--Site Main Custom Js-->
 	<script src="static/js/main.js"></script>
+	<dialog open>
+  <p>提示：本网站还在测试阶段，软件未开发完毕，请勿下载！</p>
+  <form method="dialog">
+    <button>OK</button>
+  </form>
+</dialog>
 </body>
 
 </html>
