--- a/plinx.html
+++ b/plinx.html
@@ -25,12 +25,7 @@
 </head>
 
 <body>
-		<dialog open>
-  <p>提示：本网站还在测试阶段，软件未开发完毕，请勿下载！</p>
-  <form method="dialog">
-    <button>OK</button>
-  </form>
-</dialog>
+
 	<!-- Start Preloader Area -->
 	<div class="preloader">
 		<div class="preloader-inner">
@@ -92,10 +87,10 @@
 					<div class="home-content z-index position-relative">
 						<h3>重庆牌模拟火车</h3>
 						<h1>CQGPlatform</h1>
-						<p>高级的云平台(功能测试中，软件未开发完毕，请勿点击下载）</p>
+						<p>高级的云平台(版本0.9，已开放公测，可以下载查看）</p>
 						<div class="home-button-box">
 							<a href="#" class="button home-btn-1 js-scroll">使用手册&条件</a>
-							<a href="file\CQGPlatform.exe" class="button home-btn-2">立即下载最新版</a>
+							<a download="Setup_CQGP_0.9.exe" class="button home-btn-2">立即下载最新版</a>
 						</div>
 					</div>
 				</div>
