--- a/plinx.html
+++ b/plinx.html
@@ -90,7 +90,7 @@
 						<p>高级的云平台(版本0.9，已开放公测，可以下载查看）</p>
 						<div class="home-button-box">
 							<a href="#" class="button home-btn-1 js-scroll">使用手册&条件</a>
-							<a href="Setup_CQGP_0.9.exe" class="button home-btn-2">立即下载最新版</a>
+							<a href="https://donce.lanzouj.com/iSWNc24hodpg" class="button home-btn-2">立即下载最新版</a>
 						</div>
 					</div>
 				</div>
@@ -104,6 +104,7 @@
 					<div class="col-md-12">
 						<div class="footer-copyright text-center">
 							<p>Copyright &copy; 2024.ChongqingGroup<a target="_blank" href="chongqinggroup.github.io"></a></p>
+							<p>Web support：Github<a target="_blank" href="github.com"></a></p>
 						</div>
 					</div>
 				</div>
